# QRCodeRecog

./: CMakeLists.txt  MD5.cpp  main.cpp  package.pb.cc  package.pb.h  package.proto
